--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,24 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+ody {
+  font-family: Arial, Helvetica, sans-serif;
+  background: Snow;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 20px 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+html::-webkit-scrollbar {
+  width: 10px;
+  background: rgb(26, 25, 25);
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+html::-webkit-scrollbar-thumb {
+  background: rgb(0, 100, 0);
+  ;
+  border-radius: 50px;
 }
